[package]
name = "docker-tmux-bridge"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
clap = { version = "4.5.42", features = ["derive"] }
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json"], default-features = false }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
shlex = { version = "1.3.0", default-features = false }
tokio = { version = "1.47.0", features = [
    "io-util",
    "fs",
    "rt-multi-thread",
    "process",
] }
